@@ -1,6 +1,8 @@
 package sgc.subprocesso.mapper;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -39,6 +41,7 @@ class SubprocessoDetalheMapperTest {
     }
 
     @Test
+    @DisplayName("Deve mapear toDto básico com sucesso")
     void toDto() {
         Subprocesso sp = new Subprocesso();
         sp.setCodigo(1L);
@@ -56,79 +59,153 @@ class SubprocessoDetalheMapperTest {
         assertThat(dto.getTipoProcesso()).isEqualTo("MAPEAMENTO");
     }
 
-    @Test
-    void deveMapearResponsavelTitular() {
-        Subprocesso sp = new Subprocesso();
-        sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
-        Unidade unidade = new Unidade();
-        unidade.setTituloTitular("123");
-        sp.setUnidade(unidade);
-        Processo processo = new Processo();
-        processo.setTipo(TipoProcesso.MAPEAMENTO);
-        sp.setProcesso(processo);
+    @Nested
+    @DisplayName("Mapeamento de Responsável")
+    class ResponsavelTests {
+        @Test
+        @DisplayName("Deve mapear responsável titular")
+        void deveMapearResponsavelTitular() {
+            Subprocesso sp = new Subprocesso();
+            sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
+            Unidade unidade = new Unidade();
+            unidade.setTituloTitular("123");
+            sp.setUnidade(unidade);
+            Processo processo = new Processo();
+            processo.setTipo(TipoProcesso.MAPEAMENTO);
+            sp.setProcesso(processo);
 
-        Usuario responsavel = new Usuario();
-        responsavel.setTituloEleitoral("123");
-        responsavel.setNome("Titular");
+            Usuario responsavel = new Usuario();
+            responsavel.setTituloEleitoral("123");
+            responsavel.setNome("Titular");
 
-        SubprocessoDetalheDto dto = mapper.toDto(sp, responsavel, null, null, null);
+            SubprocessoDetalheDto dto = mapper.toDto(sp, responsavel, null, null, null);
 
-        assertThat(dto.getResponsavel()).isNotNull();
-        assertThat(dto.getResponsavel().getTipoResponsabilidade()).isEqualTo("Titular");
+            assertThat(dto.getResponsavel()).isNotNull();
+            assertThat(dto.getResponsavel().getTipoResponsabilidade()).isEqualTo("Titular");
+        }
+
+        @Test
+        @DisplayName("Deve mapear responsável substituto")
+        void deveMapearResponsavelSubstituto() {
+            Subprocesso sp = new Subprocesso();
+            sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
+            Unidade unidade = new Unidade();
+            unidade.setTituloTitular("123");
+            sp.setUnidade(unidade);
+            Processo processo = new Processo();
+            processo.setTipo(TipoProcesso.MAPEAMENTO);
+            sp.setProcesso(processo);
+
+            Usuario responsavel = new Usuario();
+            responsavel.setTituloEleitoral("456"); 
+            responsavel.setNome("Substituto");
+
+            SubprocessoDetalheDto dto = mapper.toDto(sp, responsavel, null, null, null);
+
+            assertThat(dto.getResponsavel()).isNotNull();
+            assertThat(dto.getResponsavel().getTipoResponsabilidade()).isEqualTo("Substituição");
+        }
     }
 
-    @Test
-    void deveMapearResponsavelSubstituto() {
-        Subprocesso sp = new Subprocesso();
-        sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
-        Unidade unidade = new Unidade();
-        unidade.setTituloTitular("123");
-        sp.setUnidade(unidade);
-        Processo processo = new Processo();
-        processo.setTipo(TipoProcesso.MAPEAMENTO);
-        sp.setProcesso(processo);
+    @Nested
+    @DisplayName("Mapeamento de Localização")
+    class LocalizacaoTests {
+        @Test
+        @DisplayName("Deve mapear localização atual")
+        void deveMapearLocalizacaoAtual() {
+            Subprocesso sp = new Subprocesso();
+            sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
+            Processo processo = new Processo();
+            processo.setTipo(TipoProcesso.MAPEAMENTO);
+            sp.setProcesso(processo);
 
-        Usuario responsavel = new Usuario();
-        responsavel.setTituloEleitoral("456"); // Diferente do titular
-        responsavel.setNome("Substituto");
+            Unidade destino = new Unidade();
+            destino.setSigla("DEST");
+            Movimentacao mov = new Movimentacao();
+            mov.setUnidadeDestino(destino);
 
-        SubprocessoDetalheDto dto = mapper.toDto(sp, responsavel, null, null, null);
+            SubprocessoDetalheDto dto = mapper.toDto(sp, null, null, List.of(mov), null);
 
-        assertThat(dto.getResponsavel()).isNotNull();
-        assertThat(dto.getResponsavel().getTipoResponsabilidade()).isEqualTo("Substituição");
+            assertThat(dto.getLocalizacaoAtual()).isEqualTo("DEST");
+        }
+
+        @Test
+        @DisplayName("Deve mapear localização atual vazia se sem destino")
+        void deveMapearLocalizacaoAtualVaziaSeSemDestino() {
+            Subprocesso sp = new Subprocesso();
+            sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
+            Processo processo = new Processo();
+            processo.setTipo(TipoProcesso.MAPEAMENTO);
+            sp.setProcesso(processo);
+
+            Movimentacao mov = new Movimentacao();
+            mov.setUnidadeDestino(null);
+
+            SubprocessoDetalheDto dto = mapper.toDto(sp, null, null, List.of(mov), null);
+
+            assertThat(dto.getLocalizacaoAtual()).isEmpty();
+        }
     }
 
-    @Test
-    void deveMapearLocalizacaoAtual() {
-        Subprocesso sp = new Subprocesso();
-        sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
-        Processo processo = new Processo();
-        processo.setTipo(TipoProcesso.MAPEAMENTO);
-        sp.setProcesso(processo);
+    @Nested
+    @DisplayName("Prazos e Cobertura Extra")
+    class CoberturaExtraTests {
+        @Test
+        @DisplayName("Deve cobrir branches de mapPrazoEtapaAtual")
+        void deveCobrirMapPrazoEtapaAtual() {
+            java.time.LocalDateTime d1 = java.time.LocalDateTime.now();
+            java.time.LocalDateTime d2 = d1.plusDays(1);
 
-        Unidade destino = new Unidade();
-        destino.setSigla("DEST");
-        Movimentacao mov = new Movimentacao();
-        mov.setUnidadeDestino(destino);
+            Subprocesso sp = new Subprocesso();
+            sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
+            sp.setProcesso(Processo.builder().tipo(TipoProcesso.MAPEAMENTO).build());
 
-        SubprocessoDetalheDto dto = mapper.toDto(sp, null, null, List.of(mov), null);
+            sp.setDataLimiteEtapa1(d1);
+            sp.setDataLimiteEtapa2(d2);
+            
+            SubprocessoDetalheDto dto1 = mapper.toDto(sp, null, null, null, null);
+            assertThat(dto1.getPrazoEtapaAtual()).isEqualTo(d1);
 
-        assertThat(dto.getLocalizacaoAtual()).isEqualTo("DEST");
-    }
+            sp.setDataLimiteEtapa1(null);
+            SubprocessoDetalheDto dto2 = mapper.toDto(sp, null, null, null, null);
+            assertThat(dto2.getPrazoEtapaAtual()).isEqualTo(d2);
+        }
 
-    @Test
-    void deveMapearLocalizacaoAtualVaziaSeSemDestino() {
-        Subprocesso sp = new Subprocesso();
-        sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
-        Processo processo = new Processo();
-        processo.setTipo(TipoProcesso.MAPEAMENTO);
-        sp.setProcesso(processo);
+        @Test
+        @DisplayName("Deve retornar null quando todos os parâmetros principais são nulos")
+        void deveRetornarNullQuandoTodosNulos() {
+            assertThat(mapper.toDto(null, null, null, null, null)).isNull();
+        }
 
-        Movimentacao mov = new Movimentacao();
-        mov.setUnidadeDestino(null);
+        @Test
+        @DisplayName("Deve retornar null para unidade nula")
+        void deveRetornarNullParaUnidadeNula() {
+            assertThat(mapper.toUnidadeDto(null)).isNull();
+        }
+        
+        @Test
+        @DisplayName("Deve lidar com combinações de nulos")
+        void deveLidarComCombinacoesNulos() {
+            Subprocesso sp = new Subprocesso();
+            sp.setProcesso(Processo.builder().tipo(TipoProcesso.MAPEAMENTO).build());
+            sp.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
+            sp.setUnidade(new Unidade());
 
-        SubprocessoDetalheDto dto = mapper.toDto(sp, null, null, List.of(mov), null);
+            assertThat(mapper.toDto(sp, null, null, null, null)).isNotNull();
+            assertThat(mapper.toDto(null, new Usuario(), null, null, null)).isNotNull();
+            assertThat(mapper.toDto(null, null, new Usuario(), null, null)).isNotNull();
+            assertThat(mapper.toDto(null, null, null, Collections.emptyList(), null)).isNotNull();
+            assertThat(mapper.toDto(null, null, null, null, SubprocessoPermissoesDto.builder().build())).isNotNull();
 
-        assertThat(dto.getLocalizacaoAtual()).isEmpty();
+            // Branches adicionais no mapper interface
+            Usuario userSemTitulo = new Usuario();
+            userSemTitulo.setTituloEleitoral(null);
+            assertThat(mapper.toDto(sp, userSemTitulo, null, null, null)).isNotNull();
+
+            Subprocesso spSemProcesso = new Subprocesso();
+            spSemProcesso.setProcesso(null);
+            spSemProcesso.setSituacaoForcada(SituacaoSubprocesso.NAO_INICIADO);
+            assertThat(mapper.toDto(spSemProcesso, null, null, null, null)).isNotNull();
+        }
     }
 }
